# subsim

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO.md
konzept/: openssn_ai_kode.md  sonar_entfernung.py  stock.ods  sub_sichtbarkeit.py
libs/: CMakeLists.txt  download_libraries.sh
libs/imgui_sdl/: imgui_sdl.cpp  imgui_sdl.h
libs/libnada/: CMakeLists.txt
libs/libnada/include/: etc.hpp  log.hpp  zufall.hpp
libs/libnada/include/nada/: ini.hpp
libs/libnada/src/: etc.cpp  misc.cpp  zufall.cpp
src/: main.cpp  nadalib.hpp
src/fenster/: imgui_addons.cpp  imgui_addons.hpp  map_ui.cpp  map_ui.hpp  nav_ui.cpp  nav_ui.hpp  sonar_ui.cpp  sonar_ui.hpp  spielszene.cpp  spielszene.hpp  spielszene_ui.cpp  standard_ui.hpp  szene.cpp  szene.hpp  waffen_ui.cpp  waffen_ui.hpp
src/fenster/gfx/: grafik.cpp  grafik.hpp  multigrafik.cpp  multigrafik.hpp  ui.cpp  ui.hpp
src/gfx/: grafik.cpp  grafik.hpp  image.cpp  image.hpp  ui.cpp  ui.hpp
src/sim/: physik.cpp  physik.hpp  typedefs.hpp  vektor.cpp  vektor.hpp  welt.cpp  welt.hpp
src/sim/game/: abschuss.cpp  abschuss.hpp  karte.cpp  karte.hpp  team.cpp  team.hpp  zone.cpp
src/sim/game/objects/: kontakt.cpp  kontakt.hpp  motor.cpp  motor.hpp  objekt.cpp  objekt.hpp  objekt_steerable.cpp  objekt_steuerbar.cpp  objekt_steuerbar.hpp  sonar_passiv.cpp  sonar_passiv.hpp  sub.cpp  sub.hpp  sub_ai.cpp  sub_ai.hpp  torpedo.cpp  torpedo.hpp  zone.cpp  zone.hpp
src/sim/game/objekte/: decoy.cpp  decoy.hpp  explosion.cpp  explosion.hpp  motor.hpp  objekt.cpp  objekt.hpp  objekt_steuerbar.cpp  objekt_steuerbar.hpp  ping.cpp  ping.hpp  sub.cpp  sub.hpp  sub_ai.cpp  sub_ai.hpp  torpedo.cpp  torpedo.hpp
src/sim/game/sonar/: detektion.hpp  sonar.cpp  sonar.hpp  sonar_aktiv.cpp  sonar_aktiv.hpp  sonar_passiv.cpp  sonar_passiv.hpp
src/sim/game/sub/: object.hpp  sonar.cpp  sonar.hpp  sub.cpp  sub.hpp  torpedo.cpp  torpedo.hpp
src/sim/net/: host.cpp  host.hpp  klient.cpp  klient.hpp  kommando.cpp  kommando.hpp  net.hpp
src/test/: test.hpp  test_objekte.hpp  test_physik.hpp  test_welt.hpp
test/: test.hpp  test_bots.hpp  test_objekte.hpp  test_physik.hpp  test_sonstiges.hpp  test_welt.hpp
